[gd_scene load_steps=8 format=3 uid="uid://wjo00qd5kcqq"]

[ext_resource type="Script" uid="uid://cd0sa4d78dgxm" path="res://levels/Room.gd" id="1_roomscript"]
[ext_resource type="Script" uid="uid://bhexx6mj1xv3q" path="res://addons/phantom_camera/scripts/phantom_camera/phantom_camera_2d.gd" id="2_phantom"]
[ext_resource type="Script" uid="uid://8umksf8e80fw" path="res://addons/phantom_camera/scripts/resources/tween_resource.gd" id="3_ex7av"]
[ext_resource type="Script" uid="uid://crra7opej6q7t" path="res://components/RoomTransitionTrigger.gd" id="4_mcrec"]

[sub_resource type="Resource" id="Resource_mcrec"]
script = ExtResource("3_ex7av")
duration = 1.5

[sub_resource type="RectangleShape2D" id="RectangleShape2D_floor"]
size = Vector2(2000, 100)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_slher"]
size = Vector2(200, 1080)

[node name="Room2" type="Node2D"]
script = ExtResource("1_roomscript")
room_id = "room_02"
default_camera_zoom = 1.2

[node name="PhantomCamera2D" type="Node2D" parent="."]
top_level = true
position = Vector2(960, 540)
script = ExtResource("2_phantom")
follow_mode = 5
zoom = Vector2(1.2, 1.2)
tween_resource = SubResource("Resource_mcrec")

[node name="Environment" type="Node2D" parent="."]

[node name="Floor" type="StaticBody2D" parent="Environment"]
position = Vector2(1000, 900)
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Environment/Floor"]
shape = SubResource("RectangleShape2D_floor")

[node name="VisibleFloor" type="ColorRect" parent="Environment/Floor"]
offset_left = -1000.0
offset_top = -50.0
offset_right = 1000.0
offset_bottom = 50.0
color = Color(0.2, 0.4, 0.6, 1)

[node name="RoomTransitionTrigger" type="Area2D" parent="."]
position = Vector2(100, 0)
monitoring = true
monitorable = false
collision_layer = 0
collision_mask = 2
script = ExtResource("4_mcrec")
transition_direction = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="RoomTransitionTrigger"]
shape = SubResource("RectangleShape2D_slher")
